regression/fail/modules.47.sml
signature S =
   sig
      val true: bool
   end
